removed portfolio menu item and fixed index
added a bunch of working links to a lot of files.

--- a/new/index.html
+++ b/new/index.html
@@ -47,7 +47,7 @@
 					<ul class="nav navbar-nav navbar-right"> 
 						<li class="scroll active"><a href="#navigation">Home</a></li>
 						<li class="scroll"><a href="#about-us">About Us</a></li>						
-						<li class="scroll"><a href="#portfolio">Portfolio</a></li> 
+<!-- 						<li class="scroll"><a href="#portfolio">Portfolio</a></li>  -->
 						<li class="scroll"><a href="#clients">Testimonials</a></li>
 						<li><a href="productMenu.php">Products</a></li> 
 						<li><a href="contact.html">Contact</a></li>
@@ -70,25 +70,25 @@
 					<div class="carousel-caption"> 
 						<div> 
 							<h2 class="heading animated bounceInRight">PCS Distributors</h2> 
-							<p class="animated bounceInLeft">Providing high quality floors since 2016</p> 
-							<a class="btn btn-default slider-btn animated bounceInUp" href="catalog.html">Browse Flooring Selection</a> 
+							<p class="animated bounceInLeft">Providing Northern California since 1971</p> 
+							<a class="btn btn-default slider-btn animated bounceInUp" href="productMenu.php">Browse</a> 
 						</div> 
 					</div> 
 				</div>
 				<div class="item" style="background-image: url(images/slider/slide2.jpg)"> 
 					<div class="carousel-caption"> <div> 
-						<h2 class="heading animated bounceInRight">Order a sample today!</h2> 
-						<p class="animated bounceInLeft">We provide high quality samples</p> 
-						<a class="btn btn-default slider-btn animated bounceInUp" href="catalog.html">Browse Flooring Selection</a> 
+						<h2 class="heading animated bounceInRight">PCS Distributors</h2> 
+						<p class="animated bounceInLeft">Order a sample today!</p> 
+						<a class="btn btn-default slider-btn animated bounceInUp" href="productMenu.php">Browse</a> 
 					</div> 
 				</div> 
 			</div> 
 			<div class="item" style="background-image: url(images/slider/slide1.jpg)"> 
 				<div class="carousel-caption"> 
 					<div> 
-						<h2 class="heading animated bounceInRight">Vast collection of flooring options</h2> 
-						<p class="animated bounceInLeft">At PCS Distributors we provide access to many different manufacturers</p> 
-						<a class="btn btn-default slider-btn animated bounceInUp" href="catalog.html">Browse Flooring Selection</a> 
+						<h2 class="heading animated bounceInRight">PCS Distributors</h2> 
+						<p class="animated bounceInLeft">Supplying compelling niche products</p> 
+						<a class="btn btn-default slider-btn animated bounceInUp" href="productMenu.php">Browse</a> 
 					</div> 
 				</div> 
 			</div>
@@ -105,13 +105,16 @@
 			<div class="text-center">
 				<div class="col-sm-8 col-sm-offset-2">
 					<h2 class="title-one">About Us</h2>
-					<p>PCS Distributors provides high quality flooring with exceptional customer service and satisfaction.</p>
+					<p>Bringing compelling niche products to Northern California Flooring Market since 1971.</p>
+					<p>Since January of 2016 PCS is under the new direction lead by Doug Wilson and the rest of the PCS team.</p>
+					<p>Our Sales Manager for the North Bay (north of Hwy 92) is Vickie Haussmann.</p>
+					<p>Our Sales manager in the South Bay is Nihad Sahmanovic.</p>
 				</div>
 			</div>
 		</div>
 	</section><!--/#about-us-->
 
-	<section id="services" class="parallax-section">
+<!-- 	<section id="services" class="parallax-section">
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2">
@@ -153,10 +156,10 @@
 					</div>
 				</div>
 			</div>
-		</section><!--/#service-->
+		</section> --><!--/#service-->
 
 
-	<section id="portfolio">
+<!-- 	<section id="portfolio">
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2"> 
@@ -170,7 +173,7 @@
 				<li><a class="btn btn-default" href="#" data-filter=".carpet">Carpet</a></li>
 				<li><a class="btn btn-default" href="#" data-filter=".laminate">Laminate</a></li>
 				<li><a class="btn btn-default" href="#" data-filter=".logo">Logo Mats</a></li>
-			</ul><!--/#portfolio-filter-->
+			</ul>
 			<div class="portfolio-items">
 				<div class="col-sm-3 col-xs-12 portfolio-item wood">
 					<div class="view efffect">
@@ -282,7 +285,7 @@
 				</div>
 
 			</div> 
-		</section> <!--/#portfolio-->
+		</section> --> <!--/#portfolio-->
 
 					<section id="clients" class="parallax-section">
 						<div class="container">
@@ -302,14 +305,14 @@
 										<div class="item active">
 											<div class="single-client">
 												<div class="media">
-													<img class="pull-left" src="images/clients/client1.jpg" alt="">
+<!-- 													<img class="pull-left" src="images/clients/StevenMiller.jpg" alt="No Picture Available"> -->
 													<div class="media-body">
-														<blockquote><p>"PCS distributors really did a great job with the floor they installed"</p><small>Barack Obama</small></blockquote>
+														<blockquote><p>We have dealt with PCS for many years. They are our source for area rug padding. They are always there for us and deliver on time. We feel we a valuable partnership with PCS.</p><small>Steven Miller Gallery of Menlo Park- Virginia</small></blockquote>
 													</div>
 												</div>
 											</div>
 										</div>
-										<div class="item">
+<!-- 										<div class="item">
 											<div class="single-client">
 												<div class="media">
 													<img class="pull-left" src="images/clients/client3.jpg" alt="">
@@ -328,7 +331,7 @@
 													</div>
 												</div>
 											</div>
-										</div>
+										</div> -->
 									</div>
 								</div>
 							</div>
