--- a/new/contact.html
+++ b/new/contact.html
@@ -47,7 +47,7 @@
 					<ul class="nav navbar-nav navbar-right"> 
 						<li class="scroll"><a href="index.html">Home</a></li>
 						<li class="scroll"><a href="index.html">About Us</a></li>						
-						<li class="scroll"><a href="index.html">Portfolio</a></li> 
+<!-- 						<li class="scroll"><a href="index.html">Portfolio</a></li>  -->
 						<li class="scroll"><a href="index.html">Testimonials</a></li>
 						<li><a href="productMenu.php">Products</a></li> 
 						<li class="scroll active"><a href="contact.html">Contact</a></li>
