--- a/new/databaseIDToEdit.html
+++ b/new/databaseIDToEdit.html
@@ -47,8 +47,8 @@
 					<ul class="nav navbar-nav navbar-right"> 
 						<li class="scroll"><a href="index.html">Home</a></li>
 						<li class="scroll"><a href="index.html">About Us</a></li>						
-						<li class="scroll"><a href="index.html">Portfolio</a></li> 
-						<li class="scroll"><a href="index.html">Testimonials</a></li>
+<!-- 						<li class="scroll"><a href="index.html">Portfolio</a></li> 
+ -->						<li class="scroll"><a href="index.html">Testimonials</a></li>
 						<li><a href="catalog.html">Products</a></li> 
 						<li class="scroll active"><a href="contact.html">Contact</a></li>
 					</ul> 
