changed navigation class, added logo pics, added man. nav button

--- a/new/productMenuMan.html
+++ b/new/productMenuMan.html
@@ -51,65 +51,119 @@
         	<div class="row text-center">
         		<h2 class="title-one animated bounceInLeft">Manufacturers</h2>
         		<p>
-        			<a href="productMenu.php" id="manufacturer">Browse By Flooring Type</a>
+        			<a href="productMenu.php" class="lightWeight">Browse By Flooring Type</a>
         		</p>
         	</div>
-	                <div class="col-lg-8 col-lg-offset-2">
-	                	<div class="row">
-	                		<div class="col-lg-3 col-xs-12">
-	                			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
-		                			<div class="row manpicdiv text-center">
-		                				<input name="man" type="hidden" value="Capri @ Home">            				
-		                					<button type="submit" class="manbutton">
-		                						<img src="manufacturers/capriLogo.png" id="manpic">
-		                					</button>
-		                			</div>
-		                			<div class="row text-center">
-		                				<p>Capri@Home</p>
-		                			</div>
-	                			</form>
-	                		</div>
-	                		<div class="col-lg-3 col-xs-12">
-	                			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
-		                			<div class="row manpicdiv text-center">
-		                				<input name="man" type="hidden" value="DuroDesign">            				
-		                					<button type="submit" class="manbutton">
-		                						<img src="manufacturers/duroDesignLogo.png" id="manpic">
-		                					</button>
-		                			</div>
-		                			<div class="row text-center">
-		                				<p>Duro Design</p>
-		                			</div>
-	                			</form>
-	                		</div>
-	                		<div class="col-lg-3 col-xs-12">
-	                			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
-		                			<div class="row manpicdiv text-center">
-		                				<input name="man" type="hidden" value="Fritztile">            				
-		                					<button type="submit" class="manbutton">
-		                						<img src="manufacturers/fritztileLogo.png" id="manpic">
-		                					</button>
-		                			</div>
-		                			<div class="row text-center">
-		                				<p>Fritztile</p>
-		                			</div>
-	                			</form>
-	                		</div>
-	                		<div class="col-lg-3 col-xs-12">
-	                			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
-		                			<div class="row manpicdiv text-center">
-		                				<input name="man" type="hidden" value="van Gelder">            				
-		                					<button type="submit" class="manbutton">
-		                						<img src="manufacturers/vangelderLogo.png" id="manpic">
-		                					</button>
-		                			</div>
-		                			<div class="row text-center">
-		                				<p>van Gelder</p>
-		                			</div>
-	                			</form>
-	                		</div>
-	                	</div>
-	                </div>
+            <div class="col-lg-8 col-lg-offset-2">
+            	<div class="row typetitle">
+            		<div class="col-lg-3 col-xs-12">
+            			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
+                			<div class="row manpicdiv text-center">
+                				<input name="man" type="hidden" value="Capri @ Home">            				
+                					<button type="submit" class="manbutton">
+                						<img src="manufacturers/capriLogo.png" id="manpic">
+                					</button>
+                			</div>
+                			<div class="row text-center">
+                				<p>Capri@Home</p>
+                			</div>
+            			</form>
+            		</div>
+            		<div class="col-lg-3 col-xs-12">
+            			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
+                			<div class="row manpicdiv text-center">
+                				<input name="man" type="hidden" value="DuroDesign">            				
+                					<button type="submit" class="manbutton">
+                						<img src="manufacturers/duroDesignLogo.png" id="manpic">
+                					</button>
+                			</div>
+                			<div class="row text-center">
+                				<p>Duro Design</p>
+                			</div>
+            			</form>
+            		</div>
+            		<div class="col-lg-3 col-xs-12">
+            			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
+                			<div class="row manpicdiv text-center">
+                				<input name="man" type="hidden" value="Fritztile">            				
+                					<button type="submit" class="manbutton">
+                						<img src="manufacturers/fritztileLogo.png" id="manpic">
+                					</button>
+                			</div>
+                			<div class="row text-center">
+                				<p>Fritztile</p>
+                			</div>
+            			</form>
+            		</div>
+            		<div class="col-lg-3 col-xs-12">
+            			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
+                			<div class="row manpicdiv text-center">
+                				<input name="man" type="hidden" value="van Gelder">            				
+                					<button type="submit" class="manbutton">
+                						<img src="manufacturers/vangelderLogo.png" id="manpic">
+                					</button>
+                			</div>
+                			<div class="row text-center">
+                				<p>van Gelder</p>
+                			</div>
+            			</form>
+            		</div>
+            	</div>
+            	<div class="row typetitle">
+            		<div class="col-lg-3 col-xs-12">
+            			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
+                			<div class="row manpicdiv text-center">
+                				<input name="man" type="hidden" value="American Fiber Cushion">            				
+                					<button type="submit" class="manbutton">
+                						<img src="manufacturers/fibercushionLogo.png" id="manpic">
+                					</button>
+                			</div>
+                			<div class="row text-center">
+                				<p>American Fiber Cushion</p>
+                			</div>
+            			</form>
+            		</div>
+            		<div class="col-lg-3 col-xs-12">
+            			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
+                			<div class="row manpicdiv text-center">
+                				<input name="man" type="hidden" value="Future Foam">            				
+                					<button type="submit" class="manbutton">
+                						<img src="manufacturers/futurefoamLogo.png" id="manpic">
+                					</button>
+                			</div>
+                			<div class="row text-center">
+                				<p>Future Foam</p>
+                			</div>
+            			</form>
+            		</div>
+            		<div class="col-lg-3 col-xs-12">
+            			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
+                			<div class="row manpicdiv text-center">
+                				<input name="man" type="hidden" value="JADE Industries">            				
+                					<button type="submit" class="manbutton">
+                						<img src="manufacturers/jadeLogo.png" id="manpic">
+                					</button>
+                			</div>
+                			<div class="row text-center">
+                				<p>JADE Industries</p>
+                			</div>
+            			</form>
+            		</div>
+            		<div class="col-lg-3 col-xs-12">
+            			<form method="get" action="manProductPage.php" role="form" enctype="text/plain">
+                			<div class="row manpicdiv text-center">
+                				<input name="man" type="hidden" value="Teebaud">            				
+                					<button type="submit" class="manbutton">
+                						<img src="manufacturers/teebaudLogo.png" id="manpic">
+                					</button>
+                			</div>
+                			<div class="row text-center">
+                				<p>Teebaud</p>
+                			</div>
+            			</form>
+            		</div>
+            	</div>
+            </div>
         </div>
 	</section>
 
