--- a/new/index.html
+++ b/new/index.html
@@ -66,7 +66,7 @@
 				<li data-target="#main-carousel" data-slide-to="2"></li>
 			</ol><!--/.carousel-indicators--> 
 			<div class="carousel-inner">
-				<div class="item active" style="background-image: url(images/slider/slide3.jpg)"> 
+				<div class="item active" style="background-image: url(images/homePageSlide1.jpg)"> 
 					<div class="carousel-caption"> 
 						<div> 
 							<h2 class="heading animated bounceInRight">PCS Distributors</h2> 
@@ -75,7 +75,7 @@
 						</div> 
 					</div> 
 				</div>
-				<div class="item" style="background-image: url(images/slider/slide2.jpg)"> 
+				<div class="item" style="background-image: url(images/homePageSlide2.jpg)"> 
 					<div class="carousel-caption"> <div> 
 						<h2 class="heading animated bounceInRight">PCS Distributors</h2> 
 						<p class="animated bounceInLeft">Order a sample today!</p> 
@@ -83,7 +83,7 @@
 					</div> 
 				</div> 
 			</div> 
-			<div class="item" style="background-image: url(images/slider/slide1.jpg)"> 
+			<div class="item" style="background-image: url(images/homepageSlide3.jpg)"> 
 				<div class="carousel-caption"> 
 					<div> 
 						<h2 class="heading animated bounceInRight">PCS Distributors</h2> 
