added outlined text to the home page slide show text

--- a/new/index.html
+++ b/new/index.html
@@ -69,16 +69,16 @@
 				<div class="item active" style="background-image: url(images/homePageSlide1.jpg)"> 
 					<div class="carousel-caption"> 
 						<div> 
-							<h2 class="heading animated bounceInRight">PCS Distributors</h2> 
-							<p class="animated bounceInLeft">Providing Northern California since 1971</p> 
+							<h2 class="heading animated bounceInRight outlineText">PCS Distributors</h2> 
+							<p class="animated bounceInLeft outlineText">Providing Northern California since 1971</p> 
 							<a class="btn btn-default slider-btn animated bounceInUp" href="productMenu.php">Browse</a> 
 						</div> 
 					</div> 
 				</div>
 				<div class="item" style="background-image: url(images/homePageSlide2.jpg)"> 
 					<div class="carousel-caption"> <div> 
-						<h2 class="heading animated bounceInRight">PCS Distributors</h2> 
-						<p class="animated bounceInLeft">Order a sample today!</p> 
+						<h2 class="heading animated bounceInRight outlineText">PCS Distributors</h2> 
+						<p class="animated bounceInLeft outlineText">Order a sample today!</p> 
 						<a class="btn btn-default slider-btn animated bounceInUp" href="productMenu.php">Browse</a> 
 					</div> 
 				</div> 
@@ -86,8 +86,8 @@
 			<div class="item" style="background-image: url(images/homepageSlide3.jpg)"> 
 				<div class="carousel-caption"> 
 					<div> 
-						<h2 class="heading animated bounceInRight">PCS Distributors</h2> 
-						<p class="animated bounceInLeft">Supplying compelling niche products</p> 
+						<h2 class="heading animated bounceInRight outlineText">PCS Distributors</h2> 
+						<p class="animated bounceInLeft outlineText">Supplying compelling niche products</p> 
 						<a class="btn btn-default slider-btn animated bounceInUp" href="productMenu.php">Browse</a> 
 					</div> 
 				</div> 
