--- a/new/index.html
+++ b/new/index.html
@@ -298,8 +298,8 @@
 								<div id="clients-carousel" class="carousel slide" data-ride="carousel"> <!-- Indicators -->
 									<ol class="carousel-indicators">
 										<li data-target="#clients-carousel" data-slide-to="0" class="active"></li>
-										<li data-target="#clients-carousel" data-slide-to="1"></li>
-										<li data-target="#clients-carousel" data-slide-to="2"></li>
+										<!-- <li data-target="#clients-carousel" data-slide-to="1"></li>
+										<li data-target="#clients-carousel" data-slide-to="2"></li> -->
 									</ol> <!-- Wrapper for slides -->
 									<div class="carousel-inner">
 										<div class="item active">
